--- a/API+JS+HTML+Bootstrap-ПРОЕКТ/css/style.css
+++ b/API+JS+HTML+Bootstrap-ПРОЕКТ/css/style.css
@@ -43,6 +43,7 @@ p {
   margin-bottom: 0.5rem;
 }
 body {
+  margin-left: 5%;
   background-image: url("fon.jpeg");
   background-size: cover;
 }
@@ -115,7 +116,7 @@ h3 {
   border-radius: 25px;
 }
 #search1 {
-  text-align: center;
+  margin-left: 28%;
   margin-top: 50px;
 }
 #test {
@@ -278,3 +279,19 @@ button {
 .disp_none{
   display: none;
 }
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+}
+.pagination a.active {
+  background-color: #4b00ff;
+  color: white;
+  border: 1px solid #4b00ff;
+}
+.pagination a:hover:not(.active) {background-color: #ddd;}
+
